[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
bitvec = "1.0.1"

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
fxhash = "0.2.1"
good_lp = { version = "1.14.0", features = ["clarabel", "coin_cbc"], default-features = false }
itertools = "0.14.0"
md5 = "0.8.0"
ndarray = "0.16.1"
num-integer = "0.1.46"
pico-args = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.143"
tinyjson = "2.5.1"

# Solution dependencies
