[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
anyhow = "1.0.99"
aoc_lib = { version = "0.1.0", path = "../aoc_lib" }
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["nalgebra_v0_32", "vec", "primitives"] }
argmin-observer-slog = "0.1.0"
bitvec = "1.0.1"

chrono = { version = "0.4.38", optional = true }
clarabel = "0.11.1"
dhat = { version = "0.3.3", optional = true }
fxhash = "0.2.1"
good_lp = { version = "1.14.0", features = ["clarabel", "coin_cbc"], default-features = false }
itertools = "0.14.0"
md5 = "0.8.0"
nalgebra = "0.32" # match argmin-math
ndarray = "0.16.1"
num-integer = "0.1.46"
phf = { version = "0.13.1", features = ["macros"] }
pico-args = "0.5.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = "1.0.219"
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
tinyjson = "2.5.1"
